cmake_minimum_required(VERSION 3.5)
find_package( Threads )

SET(MAIN main.cpp)
SET(EXE main)
set (CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE Debug)
#file(GLOB_RECURSE SOURCES "./*.cpp")
#message(STATUS ${SOURCES})
include_directories(${SOURCES})
include_directories( include )
message(STATUS ${INCLUDE_DIRECTORIES})
add_executable(${EXE} ${MAIN})
target_link_libraries( ${EXE} ${CMAKE_THREAD_LIBS_INIT} )
